<resources>
    <string name="app_name">Guardian Forestal</string>

    <!-- Open Weater API -->
    <string name="open_weather_api_key">58287bee46d0b29681931fd98adfe0c5</string>

    <!-- WebView Strings -->
    <string name="web_view_map_1_url">/maps/fires</string>
    <string name="web_view_map_2_url">/maps/windy</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">INICIAR SESIÓN</string>
    <string name="action_sign_in_short">INICIAR SESIÓN</string>
    <string name="action_sign_up"><u>Registrarse</u></string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_map">REPORTAR INCENDIO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="signup_action">REGISTRARSE</string>
    <string name="email">Correo Electrónico</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="pass_confirmation">Repetir contraseña</string>
    <string name="splash_loading_screen_msg">Apagando incendios...</string>
    <string name="title_signin_activity">Iniciar Sessión</string>
    <string name="title_signup_activity">REGISTRARSE</string>

    <!-- Wildfire details -->
    <string name="unknown_place">Lugar desconocido</string>
    <string name="title_create_report_activity">REPORTAR INCENDIO</string>
    <string name="new_report_comments">Comentarios sobre la ruta</string>
    <string name="new_report_description">Descripción</string>
    <string name="new_report_title">Título</string>
    <string name="header_auth_uid">uid</string>
    <string name="header_auth_access_token">access-token</string>
    <string name="header_auth_client">client</string>
    <string name="header_auth_expiry">expiry</string>
    <string name="header_auth_token_type">token-type</string>
</resources>
