<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:background="@color/colorPrimaryDark"
                                              android:orientation="vertical"
                                              android:padding="30dp"
                                              android:weightSum="2">

    <ImageView
        android:id="@+id/signup_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/ic_logo"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="35dp"
        android:layout_weight="0"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_mail"
        android:elegantTextHeight="false"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_perfil"
        android:elegantTextHeight="false"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:id="@+id/signup_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="35dp"
        android:layout_weight="0"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@mipmap/username"
        android:elegantTextHeight="false"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/signup_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="35dp"
        android:layout_weight="0"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_candado"
        android:elegantTextHeight="false"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:id="@+id/signup_pass_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="35dp"
        android:layout_weight="0"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_candado"
        android:elegantTextHeight="false"
        android:ems="15"
        android:hint="@string/pass_confirmation"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_weight="0"
        android:background="@drawable/rounded_rectangle_green"
        android:text="@string/signup_action"
        android:textColor="@android:color/white"/>

</android.support.v7.widget.LinearLayoutCompat>